Try adding the model schematic

--- a/01-neural-mass-model.ipynb
+++ b/01-neural-mass-model.ipynb
@@ -38,7 +38,7 @@
         "\n",
         "__Schematic__ from the original model:\n",
         "\n",
-        "![](./img/model.png)\n",
+        "![](img/model.png)\n",
         "\n\n",
         "__Model__ with variable names\n",
         "\n",
@@ -1049,7 +1049,7 @@
     },
     "language_info": {
       "name": "python",
-      "version": "3.6.1",
+      "version": "3.6.2",
       "mimetype": "text/x-python",
       "codemirror_mode": {
         "name": "ipython",
